# staribacher-static

./: .gitignore  README.md  add_mentions.py  build.xml  fetch_data.sh  make_ts_index.py  pyproject.toml  requirements.txt  staribacher-data.xpr
.github/workflows/: arche.yml  build-nots.yml  build.yml
arche/: arche__ingest_md.sh  arche_constants.ttl  make_metadata.py  repo_objects_constants.ttl  title_image.ttl
data/meta/: about.xml  arche_constants.rdf  contact.xml
html/: about.xml  beacon.txt  contact.xml
html/css/: micro-editor.css  style.css  ts_search.css
html/js/: calendar.js  copycitation.js  currenturl.js  osd.js  osd_scroll.js  pdf_export.js  run.js  ts_search.js
html/js-data/: calendarData.js
html/tabulator-js/: config.js
oai-pmh/templates/: ListRecords.j2
pyscripts/: make_calendar_data.py  make_ts_index.py  rm_notegrps.py  setup_typensense.py  update_favicons.py
shellscripts/: dl_imprint.sh  dl_saxon.sh  fetch_data.sh  fetch_editions.sh  full_workflow.sh  process_data.sh
xslt/: api.xsl  beacon.xsl  calendar.xsl  editions.xsl  imprint.xsl  index.xsl  listbibl.xsl  listorg.xsl  listperson.xsl  listplace.xsl  meta.xsl  search.xsl  toc.xsl
xslt/partials/: aot-options.xsl  html_footer.xsl  html_head.xsl  html_navbar.xsl  html_optionsbar.xsl  params.xsl  person.xsl  shared.xsl  tabulator_dl_buttons.xsl  tabulator_js.xsl  tei-facsimile.xsl
